quoting issue on the captcha

--- a/r2/r2/templates/captcha.html
+++ b/r2/r2/templates/captcha.html
@@ -62,7 +62,7 @@ ${captchagen(thing.iden, thing.error)}
         <input id="captcha" name="captcha" type="text" size="${size}" 
                class="cap-text" onfocus="clearTitle(this)"/>
         <script type="text/javascript">
-          setMessage($('captcha'), '${_("type the letters from the image above")}');
+          setMessage($('captcha'), "${_('type the letters from the image above')}");
         </script>
      %if tabular:
      </td>
