--- a/r2/r2/templates/redditfooter.html
+++ b/r2/r2/templates/redditfooter.html
@@ -46,7 +46,7 @@
  %if g.tracker_url:
   <img alt="" src="${tracking.UserInfo.gen_url()}"/>
  %endif
- %if c.frameless_cname:
+ %if c.frameless_cname and not c.authorized_cname:
  <%
     u = UrlParser("http://%s/%s" % (get_domain(cname = True, subreddit = False), request.path))
     u.update_query(**request.get)
