minor updates for ie6 testing

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -116,8 +116,8 @@
     %endif
     
     %if thing.content:
-      <div class="fixedwidth"><!--IE6sux--></div>
-      <div class="clearleft"><!--IE6sux--></div>
+      ##<div class="fixedwidth"><!--IE6sux--></div>
+      ##<div class="clearleft"><!--IE6sux--></div>
       <div class="content">
         ${thing.content().render()}
       </div>
